--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -7,12 +7,13 @@
     android:layout_gravity="center"
     android:padding="10dp"
     android:orientation="vertical"
-    tools:context=".Agregar">
+    tools:context=".agregar">
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="1dp"
         android:padding="5dp"
         app:cardBackgroundColor="#00BCD4"
         app:cardCornerRadius="10dp">
@@ -31,7 +32,7 @@
             android:layout_height="45dp"
             android:layout_marginTop="35dp"
             android:layout_weight="1"
-            android:hint="Ingrese nombre"
+            android:hint="Tienda"
             android:inputType="textPersonName" />
 
         <EditText
@@ -41,6 +42,16 @@
             android:layout_marginTop="100dp"
             android:hint="Ingrese edad"
             android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/edinventario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="170dp"
+            android:hint="Inventario"
+            android:inputType="textEmailAddress" />
+
+
 
         <Button
             android:id="@+id/b_button"
