--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:id="@+id/list"
+        android:id="@+id/listMostrar"
         android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
