--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -3,65 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:padding="10dp"
     android:orientation="vertical"
+    android:padding="10dp"
+    android:gravity="center"
+    android:layout_height="match_parent"
     tools:context=".agregar">
 
-
-    <androidx.cardview.widget.CardView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="1dp"
-        android:padding="5dp"
-        app:cardBackgroundColor="#00BCD4"
-        app:cardCornerRadius="10dp">
+        android:layout_height="wrap_content"
+        android:text="ingrese usuarios"
+        android:textSize="28sp"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:hint="nombre:"
+        android:id="@+id/nombre"
+        android:layout_marginTop="20dp"
+        android:inputType="textPersonName"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:hint="correo:"
+        android:id="@+id/correo"
+        android:layout_marginTop="10dp"
+        android:inputType="textEmailAddress"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:hint="direccion:"
+        android:id="@+id/direccion"
+        android:layout_marginTop="10dp"
+        android:inputType="textPersonName"
+        />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="INGRESE DATOS" />
-
-        <EditText
-            android:id="@+id/tienda"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="35dp"
-            android:layout_weight="1"
-            android:hint="Tienda"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/producto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:hint="Producto"
-            android:inputType="textEmailAddress" />
-
-        <EditText
-            android:id="@+id/inventario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="170dp"
-            android:hint="Inventario"
-            android:inputType="number" />
-
-
-
-        <Button
-            android:id="@+id/b_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="220dp"
-            android:layout_marginBottom="40dp"
-            android:text="registrar" />
-
-    </androidx.cardview.widget.CardView>
-
-
+    <Button
+        android:id="@+id/btnInsert"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/teal_200"
+        android:text="insertar"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:layout_marginTop="20dp"
+        />
 </LinearLayout>
