--- a/app/src/main/res/layout/list_usuarios.xml
+++ b/app/src/main/res/layout/list_usuarios.xml
@@ -2,6 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="5dp"
+    android:orientation="horizontal"
     android:layout_height="match_parent">
 
 
@@ -44,6 +46,8 @@
             android:text="Acciones" />
 
     </RelativeLayout>
+
+
 
 
 </LinearLayout>
