--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -22,12 +22,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="Tienda"
+        android:textSize="5sp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
         >
         <AutoCompleteTextView
             android:id="@+id/autoComplete_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="15sp"
             android:inputType="none"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -44,6 +46,7 @@
             android:id="@+id/productos_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="15sp"
             android:inputType="none"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -51,30 +54,47 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:hint="nombre:"
-        android:id="@+id/nombre"
+        android:textSize="15sp"
+        android:hint="tienda:"
+        android:id="@+id/tienda"
         android:layout_marginTop="20dp"
         android:inputType="textPersonName"
         />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:hint="correo:"
-        android:id="@+id/correo"
+        android:textSize="15sp"
+        android:hint="producto:"
+        android:id="@+id/producto"
         android:layout_marginTop="10dp"
         android:inputType="textEmailAddress"
         />
-    <EditText
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:hint="direccion:"
-        android:id="@+id/direccion"
-        android:layout_marginTop="10dp"
-        android:inputType="textPersonName"
-        />
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/inventario"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="inventario"
+            android:inputType="number|textPersonName"
+            android:textSize="15sp"
+            />
+
+        <EditText
+            android:id="@+id/pedido"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="pedido"
+            android:inputType="number"
+            android:textSize="15sp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnInsert"
