--- a/app/src/main/res/layout/list_usuarios.xml
+++ b/app/src/main/res/layout/list_usuarios.xml
@@ -8,14 +8,15 @@
 
 
     <TextView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="35dp"
+        android:layout_height="25dp"
         android:id="@+id/txt_id"
         android:text="1"
         android:gravity="center_vertical|center"
-        android:textSize="25sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
+        android:layout_marginTop="5dp"
         android:background="@drawable/circle"/>
 
     <RelativeLayout
@@ -26,10 +27,11 @@
             android:id="@+id/txt_name"
             android:layout_width="wrap_content"
 
-            android:textStyle="bold"
-            android:textSize="20dp"
+
+            android:textSize="15dp"
+
             android:textColor="@color/black"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="4dp"
             android:layout_height="wrap_content"
             android:text="Bienvenidos" />
 
@@ -38,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textColor="#062BFB"
             android:layout_alignParentRight="true"
 
