--- a/app/src/main/res/layout/list_usuarios.xml
+++ b/app/src/main/res/layout/list_usuarios.xml
@@ -8,12 +8,12 @@
 
 
     <TextView
-        android:layout_width="35dp"
-        android:layout_height="25dp"
+        android:layout_width="25dp"
+        android:layout_height="18dp"
         android:id="@+id/txt_id"
         android:text="1"
         android:gravity="center_vertical|center"
-        android:textSize="15sp"
+        android:textSize="10sp"
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:layout_marginTop="5dp"
@@ -28,10 +28,12 @@
             android:layout_width="wrap_content"
 
 
-            android:textSize="15dp"
+            android:textSize="9dp"
+            android:layout_marginTop="4dp"
 
             android:textColor="@color/black"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="5dp"
+
             android:layout_height="wrap_content"
             android:text="Bienvenidos" />
 
