pequeña actualizacion de productos por tienda creamos una nueva ramma
falta estetica para los layouts y la base de datos

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,13 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:ellipsize="end"
-    android:maxLines="1"
-    android:textSize="10sp"
-    android:textAppearance="?attr/textAppearanceSubtitle1"
-    >
+    android:layout_height="80dp">
 
-</TextView>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="57dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="25dp"
+        android:src="@android:drawable/btn_star" />
+
+
+
+    <TextView
+        android:id="@+id/texView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#333"
+        android:text="Esta es una lista nueva"
+        android:layout_gravity="center_vertical"
+        android:textSize="20dp"
+        />
+
+
+
+
+</LinearLayout>
+
+
+<!--
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <Button
+            android:id="@+id/button"
+            android:text="Button"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:textSize="8dp"
+            />
+
+    </RelativeLayout>
+
+
+-->
