--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,26 +7,26 @@
     android:padding="10dp"
     tools:context=".MainActivity">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/myListView"/>
-
-    </androidx.cardview.widget.CardView>
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_baseline_add_circle_24"
-        android:onClick="agregar"
-        android:layout_alignParentBottom="true"
-        android:backgroundTint="@color/teal_200"
-        android:layout_alignParentRight="true"
-        android:layout_margin="30dp"
+        tools:ignore="MissingConstraints"
         />
 
-</RelativeLayout>
+
+
+</LinearLayout>
+
+
+<!--
+    <ExpandableListView
+        android:id="@+id/expandlistmain"
+        android:divider="@android:color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
+        android:dividerHeight="0.05dp"
+        />
+
+-->
