--- a/app/src/main/res/layout/activity_editar.xml
+++ b/app/src/main/res/layout/activity_editar.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:padding="10dp"
     android:layout_height="match_parent"
-    tools:context=".editar">
+    tools:context=".mercapp.editar">
 
     <TextView
         android:layout_width="match_parent"
