--- a/app/src/main/res/layout/activity_sc_franco.xml
+++ b/app/src/main/res/layout/activity_sc_franco.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".sc_franco">
+    tools:context=".mercapp.smercados.sc_franco">
 
 
     <ListView
