--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
-    tools:context=".MainActivity">
+    tools:context=".ShareActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,15 +19,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Home"
+            android:text="Share"
             android:layout_gravity="center"
             android:layout_marginTop="400dp"
             android:textColor="@color/lavender"
             android:textSize="36sp"/>
     </LinearLayout>
 
+
     <RelativeLayout
-        android:layout_width="260dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:layout_gravity="start">
@@ -38,25 +39,4 @@
 
 
 
-
 </androidx.drawerlayout.widget.DrawerLayout>
-
-
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
-    tools:context=".MainActivity">
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        />
-</LinearLayout>
--->
