--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:id="@+id/drawerLayout"
     tools:context=".MainActivity">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/myListView"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    </androidx.cardview.widget.CardView>
+        <include
+            layout="@layout/toolbar"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:layout_gravity="center"
+            android:layout_marginTop="400dp"
+            android:textColor="@color/lavender"
+            android:textSize="36sp"/>
+    </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_baseline_add_circle_24"
-        android:onClick="agregar"
-        android:layout_alignParentBottom="true"
-        android:backgroundTint="@color/teal_200"
-        android:layout_alignParentRight="true"
-        android:layout_margin="30dp"
-        />
+    <RelativeLayout
+        android:layout_width="260dp"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:layout_gravity="start">
 
-</RelativeLayout>
+        <include
+            layout="@layout/nav_drawer"/>
+
+    </RelativeLayout>
+
+    
+
+</androidx.drawerlayout.widget.DrawerLayout>
