--- a/app/src/main/res/layout/list_usuarios.xml
+++ b/app/src/main/res/layout/list_usuarios.xml
@@ -42,12 +42,46 @@
             android:textColor="#062BFB"
             android:layout_alignParentRight="true"
             android:layout_marginEnd="8dp"
-            android:text="Acciones" />
+            android:text="Opciones" />
+
+
+
+        <EditText
+            android:id="@+id/inventario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="inventario"
+            android:inputType="number|textPersonName"
+            android:textSize="9sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="5dp"
+            />
+
+
+        <EditText
+            android:id="@+id/pedido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="pedido"
+            android:inputType="number"
+            android:textSize="9sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="70dp"
+            />
+
+
+
+        <Button
+            android:id="@+id/btnInsert"
+            android:layout_width="67dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:backgroundTint="@color/teal_200"
+            android:text="insertar"
+            android:textColor="@android:color/white"
+            android:textSize="7sp"
+            android:layout_marginTop="10dp"
+            />
+
     </RelativeLayout>
-
-
-
-
-
-
 </LinearLayout>
