--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout"
+    android:padding="10dp"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/myListView"/>
 
-        <include
-            layout="@layout/toolbar"/>
+    </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Home"
-            android:layout_gravity="center"
-            android:layout_marginTop="400dp"
-            android:textColor="@color/lavender"
-            android:textSize="36sp"/>
-    </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="260dp"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:layout_gravity="start">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_store_mall_directory_24"
+        android:onClick="main"
+        android:layout_alignParentBottom="true"
+        android:backgroundTint="@color/teal_200"
+        android:layout_alignParentRight="true"
+        android:layout_margin="30dp"
+        />
 
-        <include
-            layout="@layout/nav_drawer"/>
-
-    </RelativeLayout>
-
-    
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</RelativeLayout>
